--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-		<title>Mys Viajes - Eric</title>
+		<title>Mys Viajes - Eric1</title>
 		<link rel="stylesheet" href="css/contacto.css" />
 
 		<!--CSS-->
