--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-		<title>Mys Viajes - Eric1</title>
+		<title>Mys Viajes - Eric-12</title>
 		<link rel="stylesheet" href="css/contacto.css" />
 
 		<!--CSS-->
@@ -240,32 +240,25 @@
 				<div class="contact-wrapper">
 					<div class="contact-form">
 						<h3>Completa los siguientes campo</h3>
-						<form action="my-correo.php" method="POST">
+						<form action="my-correo.php" method="post">
 							<p>
 								<label>Nombres</label>
-								<input type="text" name="nombre" id="names" required />
+								<input type="text" name="nombre" required />
 							</p>
 							<p>
 								<label>Telefono / Celular</label>
-								<input type="text" name="telefono" id="phone" required />
+								<input type="text" name="telefono" required />
 							</p>
 							<p class="txt-large">
 								<label>Correo electrónico</label>
-								<input type="text" name="email" id="email" required />
+								<input type="text" name="email" required />
 							</p>
 							<p class="txt-large">
 								<label>Mensaje</label>
-								<textarea
-									id="mensaje"
-									name="mensaje"
-									rows="3"
-									required
-								></textarea>
+								<textarea name="mensaje" rows="3" required></textarea>
 							</p>
 							<p class="block-btn">
-								<button type="submit" id="btnsend">
-									Enviar mensaje
-								</button>
+								<button type="submit" id="btnsend">Enviar mensaje</button>
 							</p>
 						</form>
 					</div>
