--- a/index.html
+++ b/index.html
@@ -240,25 +240,25 @@
 				<div class="contact-wrapper">
 					<div class="contact-form">
 						<h3>Completa los siguientes campo</h3>
-						<form action="my-correo.php" method="post">
+						<form action="my-correo.php" method="POST">
 							<p>
 								<label>Nombres</label>
 								<input type="text" name="nombre" required />
 							</p>
 							<p>
 								<label>Telefono / Celular</label>
-								<input type="text" name="telefono" required />
+								<input type="number" name="telefono" required />
 							</p>
 							<p class="txt-large">
 								<label>Correo electrónico</label>
-								<input type="text" name="email" required />
+								<input type="email" name="email" required />
 							</p>
 							<p class="txt-large">
 								<label>Mensaje</label>
 								<textarea name="mensaje" rows="3" required></textarea>
 							</p>
 							<p class="block-btn">
-								<button type="submit" id="btnsend">Enviar mensaje</button>
+								<button type="submit" id="">Enviar mensaje</button>
 							</p>
 						</form>
 					</div>
