--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-		<title>Mys Viajes - Eric-123</title>
+		<title>Mys Viajes - Eric-4</title>
 		<link rel="stylesheet" href="css/contacto.css" />
 
 		<!--CSS-->
@@ -240,14 +240,14 @@
 				<div class="contact-wrapper">
 					<div class="contact-form">
 						<h3>Completa los siguientes campo</h3>
-						<form action="my-correo.php" method="POST">
+						<form action="./my-correo.php" method="POST">
 							<p>
 								<label>Nombres</label>
 								<input type="text" name="nombre" required />
 							</p>
 							<p>
 								<label>Telefono / Celular</label>
-								<input type="number" name="telefono" required />
+								<input type="tel" name="telefono" required />
 							</p>
 							<p class="txt-large">
 								<label>Correo electrónico</label>
