--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-		<title>Mys Viajes - Eric-4</title>
+		<title>Mys Viajes - Eric--1</title>
 		<link rel="stylesheet" href="css/contacto.css" />
 
 		<!--CSS-->
@@ -240,7 +240,7 @@
 				<div class="contact-wrapper">
 					<div class="contact-form">
 						<h3>Completa los siguientes campo</h3>
-						<form action="./my-correo.php" method="POST">
+						<form action="my-correo.php" method="POST">
 							<p>
 								<label>Nombres</label>
 								<input type="text" name="nombre" required />
